# kafka-openflow-snowflake

./: LICENSE.txt  README.md  RPK_CLI_README.md  Taskfile.yml  env.template  pyproject.toml
data/: generate_logs.py  logs.json  logs_evolved.json
sql/: 1.snowflake_setup.sql  2.verify_ingestion.sql  2a.verify_base_schema.sql  2b.verify_schema_evolution.sql  3.analytics_queries.sql  4.cortex_search.sql  5. setup_alert.sql  6.cleanup.sql
