[project]
name = "sfguide-getting-started-openflow-kafka-connector"
version = "0.1.0"
description = "Snowflake Openflow Kafka Connector Quickstart - Stream real-time logs from Kafka to Snowflake"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.2.15",
    "python-dotenv>=1.1.1",
]
